--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ jobs:
       - run: make check-version
 workflows:
   version: 2
-  build_test_deploy:
+  build:
     jobs:
       - check_version:
           filters:
